@@ -4,29 +4,29 @@
 #	Thanks, linux kernel hackers.
 #
 
-#
+###
 # Select 32 or 64 bit
-#
-config	64BIT
+###
+config 64BIT
 	bool "64-bit kernel"
 	---help---
 	Say yes to build a 64-bit kernel - formerly known as x86_64
 	Say no to build a 32-bit kernel - formely known as i386
 
-config	X86_32
+config X86_32
 	def_bool y
 	depends on !64BIT
 
-config	X86_64
+config X86_64
 	def_bool y
 	depends on 64BIT
 
-#
+###
 # Arch settings
-#
+###
 menu	"Processor type and features"
 
-config	X86
+config X86
 	def_bool y
 	select HAVE_ARCH_JUMP_LABEL
 	select HAVE_KERNEL_BZIP2
@@ -36,34 +36,40 @@ config	X86
 	select HAVE_KERNEL_LZO
 	select HAVE_KERNEL_X
 
-config	OUTPUT_FORMAT
+config OUTPUT_FORMAT
 	string
 	default "elf32-i386" if X86_32
 	default "elf64-x86-64" if X86_64
 
-config	ARCH_DEFCONFIG
+config ARCH_DEFCONFIG
 	string
 	default "arch/x86/configs/i386_defconfig" if X86_32
 	default "arch/x86/configs/x86_64_defconfig" if X86_64
 
-config	MMU
+config MMU
 	def_bool y
 
-config	ARCH_HAS_CPU_RELAX
+config ARCH_HAS_CPU_RELAX
 	def_bool y
 
-config	ARCH_HAS_CACHE_LINE_SIZE
+config ARCH_HAS_CACHE_LINE_SIZE
 	def_bool y
 
-config	X86_32_SMP
+config X86_32_SMP
 	def_bool y
 	depends on X86_32 && SMP
 
-config	X86_64_SMP
+config X86_64_SMP
 	def_bool y
 	depends on X86_64 && SMP
 
-config	SMP
+config PGTABLE_LEVELS
+	int
+	default 4 if X86_64
+	default 3 if X86_PAE
+	default 2
+
+config SMP
 	bool "Symmetric multi-processing support"
 	---help---
 	  This enables support for systems with more than one CPU. If you have
@@ -91,7 +97,7 @@ config	SMP
 
 	  If you don't know what to do here, say N.
 
-config	MAXSMP
+config MAXSMP
 	bool "Enable Maximum number of SMP Processors and NUMA Nodes"
 	depends on X86_64 && SMP && DEBUG_KERNEL
 	select CPUMASK_OFFSTACK
@@ -99,7 +105,7 @@ config	MAXSMP
 	  Enable maximum number of CPUS and NUMA Nodes for this architecture.
 	  If unsure, say N.
 
-config	NR_CPUS
+config NR_CPUS
 	int "Maximum number of CPUs" if SMP && !MAXSMP
 	range 2 8 if SMP && X86_32 && !X86_BIGSMP
 	range 2 512 if SMP && !MAXSMP && !CPUMASK_OFFSTACK
@@ -123,7 +129,7 @@ choice
 	default HIGHMEM4G
 	depends on X86_32
 
-config	NOHIGHMEM
+config NOHIGHMEM
 	bool "off"
 	---help---
 	  Linux can use up to 64 Gigabytes of physical memory on x86 systems.
@@ -159,13 +165,13 @@ config	NOHIGHMEM
 
 	  If unsure, say "off".
 
-config	HIGHMEM4G
+config HIGHMEM4G
 	bool "4GB"
 	---help---
 	  Select this if you have a 32-bit processor and between 1 and 4
 	  gigabytes of physical RAM.
 
-config	HIGHMEM64G
+config HIGHMEM64G
 	bool "64GB"
 	depends on !M486
 	select X86_PAE
@@ -209,7 +215,7 @@ choice
 		bool "1G/3G user/kernel split"
 endchoice
 
-config	PAGE_OFFSET
+config PAGE_OFFSET
 	hex
 	default 0xB0000000 if VMSPLIT_3G_OPT
 	default 0x80000000 if VMSPLIT_2G
@@ -218,11 +224,11 @@ config	PAGE_OFFSET
 	default 0xC0000000
 	depends on X86_32
 
-config	HIGHMEM
+config HIGHMEM
 	def_bool y
 	depends on X86_32 && (HIGHMEM64G || HIGHMEM4G)
 
-config	X86_PAE
+config X86_PAE
 	bool "PAE (Physical Address Extension) Support"
 	depends on X86_32 && !HIGHMEM4G
 	---help---
@@ -231,7 +237,7 @@ config	X86_PAE
 	  has the cost of more pagetable lookup overhead, and also
 	  consumes more pagetable space per process.
 
-config	HPET_TIMER
+config HPET_TIMER
 	def_bool X86_64
 	prompt "HPET Timer Support" if X86_32
 	---help---
@@ -253,10 +259,12 @@ config	HPET_TIMER
 endmenu
 
 
-
+#
+# Misc configurations
+#
 menu	"Misc features"
 
-config	SPINLOCK_TICKET
+config SPINLOCK_TICKET
 	bool "Ticket Spinlock Implementation"
 	---help---
 	  This enables x86 spinlock implemented in tickets version. FIFO ticket
@@ -270,10 +278,12 @@ config	SPINLOCK_TICKET
 endmenu
 
 
-
+#
+# Bus configurations
+#
 menu	"Bus options (PCI etc.)"
 
-config	PCI
+config PCI
 	bool "PCI support"
 	default y
 	---help---
@@ -301,30 +311,30 @@ choice
 	  direct access method and falls back to the BIOS if that doesn't
 	  work. If unsure, go with the default, which is "Any".
 
-config	PCI_GOBIOS
+config PCI_GOBIOS
 	bool "BIOS"
 
-config	PCI_GOMMCONFIG
+config PCI_GOMMCONFIG
 	bool "MMConfig"
 
-config	PCI_GODIRECT
+config PCI_GODIRECT
 	bool "Direct"
 
-config	PCI_GOOLPC
+config PCI_GOOLPC
 	bool "OLPC XO-1"
 	depends on OLPC
 
-config	PCI_GOANY
+config PCI_GOANY
 	bool "Any"
 
 endchoice
 
-config	PCI_BIOS
+config PCI_BIOS
 	def_bool y
 	depends on X86_32 && PCI && (PCI_GOBIOS || PCI_GOANY)
 
 # x86-64 doesn't support PCI BIOS access from long mode so always go direct.
-config	PCI_DIRECT
+config PCI_DIRECT
 	def_bool y
 	depends on PCI && (X86_64 || (PCI_GODIRECT || PCI_GOANY || PCI_GOOLPC || PCI_GOMMCONFIG))
 
