@@ -17,16 +17,44 @@
  */
 
 /*
- * Two-level page tables, in normal 32-bit x86 machines
+ * Two-level page tables related operations
  */
 
 #ifndef _ASM_X86_PGTABLE_2LEVEL_H_
 #define _ASM_X86_PGTABLE_2LEVEL_H_
+
+#ifndef __ASSEMBLY__
 
 #define pte_ERROR(e) \
 	pr_err("%s:%d: bad pte %08lx\n", __FILE__, __LINE__, (e).pte_low)
 #define pgd_ERROR(e) \
 	pr_err("%s:%d: bad pgd %08lx\n", __FILE__, __LINE__, pgd_val(e))
 
+static inline void native_set_pte(pte_t *ptep, pte_t pte)
+{
+	*ptep = pte;
+}
+
+static inline void native_set_pmd(pmd_t *pmdp, pmd_t pmd)
+{
+	*pmdp = pmd;
+}
+
+static inline void native_set_pte_atomic(pte_t *ptep, pte_t pte)
+{
+	native_set_pte(ptep, pte);
+}
+
+static inline void native_clear_pte(pte_t *ptep)
+{
+	native_set_pte(ptep, __pte(0));
+}
+
+static inline void native_clear_pmd(pmd_t *pmdp)
+{
+	native_set_pmd(pmdp, __pmd(0));
+}
+
+#endif /* __ASSEMBLY__ */
 
 #endif /* _ASM_X86_PGTABLE_2LEVEL_H_ */
