@@ -29,8 +29,6 @@
 #ifndef _ASM_X86_PGTABLE_32_H_
 #define _ASM_X86_PGTABLE_32_H_
 
-#include <asm/pgtable_32_types.h>
-
 #ifdef CONFIG_X86_PAE
 # include <asm/pgtable-3level.h>
 #else
