@@ -29,7 +29,7 @@ typedef unsigned long pgprotval_t;
 typedef struct {
 	pteval_t pte;
 } pte_t;
-#endif
+#endif /* __ASSEMBLY__ */
 
 #define SHARED_KERNEL_PMD	0
 
