@@ -420,3 +420,4 @@ Mon Jan 25 14:03:30 CST 2016
 Tue Jan 26 10:15:37 CST 2016
 - [+] arch/x86/include/asm/pgtable_32_types.h
 - [+] arch/x86/include/asm/pgtable_64_types.h
+- [+] arch/x86/include/asm/pgtable_types.h	[D] separate types from operations
